set version to 0.45

--- a/skins/exfoliation/skin.conf
+++ b/skins/exfoliation/skin.conf
@@ -6,7 +6,7 @@
 # is included in any derivative work.
 
 [Extras]
-    version = X
+    version = 0.45
 
     # If you have a Google Analytics ID, specify it here:
     #googleAnalyticsId = UA-12345678-1
